part5/exercise-5.03/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    app: static-web
spec:
  containers:
    - name: site-updater
      image: alpine:latest
      command: ['sh', '-c', 'apk add --no-cache curl && while true; do echo "[Updater] Curling site..."; curl -s -L https://en.wikipedia.org/wiki/Special:Random > /usr/share/nginx/html/site.html> /usr/share/nginx/html/site.html && echo "Updated site.html"; chmod 777 /usr/share/nginx/html && chmod 666 /usr/share/nginx/html/site.html; sleep 300; done']
      volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html 

    - name: app
      image: nginx:alpine
      volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html  # Nginx will serve static content from here
      ports:
        - containerPort: 80
  volumes:
    - name: data
      emptyDir: {}  # Empty directory volume, it gets cleared when the pod is deleted
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: ClusterIP
  selector:
    app: static-web
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
